# WowDashboard

./: .gitignore  CMakeLists.txt  main.cpp
backend/: ApiClient.cpp  ApiClient.h  PlayerDetailsService.cpp  PlayerDetailsService.h  PlayersService.cpp  PlayersService.h  StatusService.cpp  StatusService.h
qml/: Main.qml  Nav.qml
qml/components/: RestartModal.qml  StatusBadge.qml  StatusCard.qml
qml/pages/: Download.qml  Home.qml  PlayerDetails.qml  Players.qml  Status.qml
